--- a/sections/architecture/architecture.tex
+++ b/sections/architecture/architecture.tex
@@ -1,9 +1,9 @@
 \chapter{Architecture}\label{ch:architecture}
 API Scout is divided into three main parts: the backend, the databases, and the model.
 A general architecture of the project can be found in Figure~\ref{fig:backend-architecture}.
-In the backend, we have all those methods and APIs that deal with the embedding, indexing, and retrieval of the OpenAPI specifications.
+In the backend, we have all those methods and API endpoints that deal with the embedding, indexing, and retrieval of the OpenAPI specifications.
 For storing the data, we use both a MongoDB and an Elasticsearch instance.
-The MongoDB instance is used for storing the OpenAPI json files.
+The MongoDB instance is used for storing the OpenAPI JSON files.
 On the other hand, the Elasticsearch instance is used to store the metadata -- used by the DSL -- and the vector embeddings of the specifications. \\ \\
 From a tech stack point of view, we can see in Figure~\ref{fig:languages-architecture} that we used both Elasticsearch and MongoDB for the databases, Tensorflow for the embedding model, and Golang for the backend.
 
