--- a/sections/background/state-of-the-art/open-api.tex
+++ b/sections/background/state-of-the-art/open-api.tex
@@ -2,7 +2,7 @@
 The OpenAPI Specification~\cite{noauthor_openapi_nodate} is an Interface Definition Language (IDL) used for documenting HTTP-based APIs~\cite{de_api_2017}. \\ \\
 The OpenAPI Specification standard was first published in 2011 as the \("\)Swagger Specification\("\) -- since it was part of the Swagger Framework.
 In 2015, however, the Swagger Specification was donated by SmartBear Software -- the company that acquired the Swagger Specification -- to an organization called OpenAPI Initiative, which was under the sponsorship of the Linux Foundation.
-Finally, in 2016, the Swagger Specification was renamed in \("\)OpenAPI Specification\("\) (OAS), and moved to another repository.
+Finally, in 2016, the Swagger Specification was renamed as \("\)OpenAPI Specification\("\) (OAS), and moved to another repository.
 In 2021, version 3.1.0 -- the current version -- was released by the OpenAPI Initiative (Figure~\ref{lst:oas-example}). \\ \\
 
 \begin{lstlisting}[label={lst:oas-example},language=json,caption={Example of an OAS JSON document},captionpos=b,breaklines=true]
@@ -53,10 +53,10 @@ In 2021, version 3.1.0 -- the current version -- was released by the OpenAPI Ini
       }
 \end{lstlisting}
 
-\noindent The OpenAPI specification, however, is not the only one.
+\noindent The OpenAPI Specification, however, is not the only one.
 There are several other alternative modeling languages for describing RESTful APIs.
 For example, there is the RESTful API Modeling Language (RAML) \footnote{https://raml.org/}, and the API Blueprint \footnote{https://apiblueprint.org/} language.
-These languages, though, are not as used as the OAS\@.
+These languages, though, are not as used as OAS\@.
 So much so, that the GitHub repository containing the RAML language has been archived on the 17\textsuperscript{th} of February 2024\footnote{https://github.com/raml-org/raml-spec}.
 
 \begin{lstlisting}[label={lst:raml},caption={Example of a RAML document},captionpos=b,language=yaml]
