--- a/sections/conclusion/retrospective.tex
+++ b/sections/conclusion/retrospective.tex
@@ -10,10 +10,10 @@ Below, we are going to have a look at all the sections that compose this thesis.
     Moreover, we also looked at the existing literature to see if someone had already laid the foundations upon which we could build our tool.
     \item \textbf{Experimentation} Following the study of the literature, we decided to create some proofs-of-concept to have a better understanding of the feasibility of our tool.
     In particular, we created a proof-of-concept for the embedding and indexing part of the tool.
-    The evaluation of this method was done on a much smaller dataset.
+    The evaluation of this method was done on a much smaller dataset (\textasciitilde 3'000 documents).
     \item \textbf{Methodology} After having developed a working and promising proof-of-concept, we started working on the actual implementation of the tool.
     We started by describing the grammar, operations, types, and parameters of the DSL\@.
-    After, we defined the architecture of the system, and how all the different microservices would be connected to create the final system.
+    After, we defined the architecture of the system, and how all the different parts would be connected to create the final system.
     Finally, we talked about the actual implementation details of our system.
     \item \textbf{Evaluation} Being done with the implementation part, we started the evaluation process.
     Here, we employed different techniques and evaluation metrics to have a better understanding of the performance of our system.
