--- a/sections/dsl/grammar.tex
+++ b/sections/dsl/grammar.tex
@@ -3,7 +3,7 @@ In Figure~\ref{fig:bnf}, we have the BNF (Backus Normal Form) notation of our fi
 It is important to note that part of this grammar -- namely the \textlangle~version \textrangle~and \textlangle~version core \textrangle~non-terminals -- as well as the MAJOR, MINOR, PATCH, PRERELEASE, and BUILD tokens -- are taken from the official semantic versioning page \footnote{https://github.com/semver/semver/blob/master/semver.md}.
 As we can see, several tokens are also used to represent terminals in our grammar.
 The tokens are SPACE, PARAMETER, STRING, DATE, BOOLEAN, INTEGER, MAJOR, MINOR, PATCH, PRERELEASE, and BUILD\@.
-All of these tokens will be discussed more in detail in the following sections of this chapter. \\ \\
+All of these tokens will be discussed more in detail in the following sections of this chapter.
 In particular, PARAMETER is discussed in Section~\ref{sec:parameters}.
 STRING, DATE, BOOLEAN, and INTEGER are discussed in Section~\ref{sec:types}.
 MAJOR, MINOR, PATCH, PRERELEASE, and BUILD are discussed in Section~\ref{sec:types}.
