--- a/sections/dsl/parameters.tex
+++ b/sections/dsl/parameters.tex
@@ -1,5 +1,5 @@
 \section{Parameters}\label{sec:parameters}
-To filter the result, several different categories of parameters are available.
+To filter the results, several different categories of parameters are available.
 The filter parameters are divided in API, specification, and metrics categories. \\ \\
 In the case of the API category, we have all those parameters that are connected to the extracted metadata about the API (not the specification).
 In Table~\ref{tab:parameters-api}, we describe all the parameters in this category with their type and a short description.
@@ -8,7 +8,7 @@ These are the parameters relative to the metadata extracted from the OpenAPI spe
 Finally, Table~\ref{tab:parameters-metrics} describes the parameters in the metrics category.
 These parameters are connected with the metric values of the specifications~\cite{souhaila_serbout_apistic_2024}.
 
-\begin{table}[H]
+\begin{table}[!h]
     \begin{center}
         \begin{tabular}{l l p{9cm}}
             \hline
