--- a/sections/introduction/document-structure.tex
+++ b/sections/introduction/document-structure.tex
@@ -1,13 +1,14 @@
 \section{Document Structure}\label{sec:document-structure}
 This document has been divided into several different chapters.
 Each chapter describes the different steps that allowed us to complete this project.
-More specifically, we have seven chapters.
+More specifically, we have eight chapters.
 
 \begin{description}
     \item \textbf{Background} In this chapter, we talk about the state-of-the-art, as well as the research that has already been done in the field of Web API description embedding and indexing.
     \item \textbf{Feasibility Study} This chapter explains in detail the experimentation that has been carried out to study in depth the dataset,
     as well as to support our architectural and implementation decisions.
     \item \textbf{Architecture} Here we go over the architecture of API Scout and the reasons behind such architectural decisions.
+    \item \textbf{Filtering DSL} This chapter outlines the grammar, operations, parameters, types, and structure of the DSL\@.
     \item \textbf{Implementation} This chapter explains in detail how API Scout works, from the Web framework to the DSL compiler.
     \item \textbf{Deployment} In this chapter, we discuss all the scripts and steps that were taken to deploy the service to a remote server.
     \item \textbf{Evaluation} Here, we analyze some experiments we performed on API Scout with several different queries and report the results of such experiments.
